# Sp3ctra_Application

./: .cproject  .gitignore  .project  AUDIO_OPTIMIZATION_SUMMARY.md  BRANCHEMENT_RECEPTEUR_IR.md  CISYNTH.code-workspace  CISYNTH.pro  CISYNTH_noGUI.pro  CISYNTH_noGUI.pro.orig  Makefile  Makefile.orig  OPTIMISATION_RASPBERRY_PI.md  PCM5122_AUDIO_SOLUTION.md  README.md  README_CROSS_PLATFORM.md  README_DEPLOIEMENT_JETSON.md  README_JETSON_NANO.md  README_Sony_HT_X8500_IR.md  README_TROUBLESHOOTING_JETSON.md  SETUP_RASPBERRY_PI_SSHFS.md  SYNTH_FFT_SPECS.md  audio_callback_minimal.patch  build_nogui.sh  build_pi_clean.sh  build_pi_optimized.sh  build_with_qmake.sh  capture_real_codes.sh  cisynth_qmake_solution.md  cisynth_solutions.md  clean_and_rebuild.sh  clean_build_pi.sh  config_96khz.h  configuration_menu_stairville.md  configuration_stairville.md  connect_to_jetson_serial.sh  deploy_alsa_fix.sh  deploy_audio_fix_to_jetson.sh  deploy_audio_fix_to_pi.sh  deploy_bossdac_fix.sh  deploy_compilation_fix.sh  (+54 more)
.personalFiles/PRE/CISYNTH.xcodeproj/: project.pbxproj
CISYNTH/: AppDelegate.h  AppDelegate.m  CISYNTH.entitlements  ViewController.h  ViewController.m
CISYNTH.xcodeproj/: project.pbxproj
CISYNTH.xcodeproj/project.xcworkspace/xcuserdata/zhonx.xcuserdatad/: UserInterfaceState.xcuserstate
CISYNTH.xcodeproj/xcshareddata/xcschemes/: CISYNTH.xcscheme
CISYNTH.xcodeproj/xcuserdata/zhonx.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CISYNTH.xcodeproj/xcuserdata/zhonx.xcuserdatad/xcschemes/: xcschememanagement.plist
CISYNTH/Inc/: audio.h  config.h  context.h  dmx.h  shared.h  spectral_generator.h  synth.h
CISYNTH/Src/: display.c  dmx.c  main.c  multithreading.c  spectral_generator.c  synth.c  wave_generation.c
CISYNTH_Application.xcodeproj/: project.pbxproj
CISYNTH_Application.xcodeproj/project.xcworkspace/xcuserdata/zhonx.xcuserdatad/: UserInterfaceState.xcuserstate
CISYNTH_Application.xcodeproj/xcshareddata/xcschemes/: SSS_Viewer.xcscheme
CISYNTH_Application.xcodeproj/xcuserdata/zhonx.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CISYNTH_Application.xcodeproj/xcuserdata/zhonx.xcuserdatad/xcschemes/: xcschememanagement.plist
CISYNTH_Application/Inc/: config.h  context.h  display.h  dmx.h  error.h  multithreading.h  shared.h  synth.h
CISYNTH_Application/Src/: display.c  dmx.c  main.c  multithreading.c  shared.c  synth.c  wave_generation.c
Debug/: SSS_Viewer  makefile
Debug/src/: subdir.mk
Release/: makefile
Release/src/: subdir.mk
SSS_Viewer.xcodeproj/: project.pbxproj
SSS_Viewer.xcodeproj/project.xcworkspace/xcuserdata/zhonx.xcuserdatad/: UserInterfaceState.xcuserstate
SSS_Viewer.xcodeproj/xcshareddata/xcschemes/: SSS_Viewer.xcscheme
SSS_Viewer.xcodeproj/xcuserdata/zhonx.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SSS_Viewer/Inc/: audio.h  config.h  context.h  display.h  multithreading.h  shared.h  synth.h  udp.h
SSS_Viewer/Src/: audio.c  display.c  main.c  multithreading.c  shared.c  synth.c  udp.c
build_nogui/: Makefile
build_nogui/CISYNTH_noGUI.app/Contents/: Info.plist
build_nogui/CISYNTH_noGUI.app/Contents/MacOS/: CISYNTH_noGUI
build_qmake/: Makefile  lancer_cisynth.sh  launch_cisynth.sh
build_qmake/CISYNTH.app/Contents/Frameworks/: libFLAC.14.dylib  libX11.6.dylib  libXau.6.dylib  libXdmcp.6.dylib  libXext.6.dylib  libXrender.1.dylib  libcairo.2.dylib  libcsfml-graphics.2.6.dylib  libcsfml-system.2.6.dylib  libcsfml-window.2.6.dylib  libfftw3.3.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libglib-2.0.0.dylib  libgthread-2.0.0.dylib  libjpeg.8.dylib  libmp3lame.0.dylib  libmpg123.0.dylib  libogg.0.dylib  libopus.0.dylib  libpixman-1.0.dylib  libpng16.16.dylib  libsfml-graphics.2.6.dylib  libsfml-graphics.3.0.dylib  libsfml-system.2.6.dylib  libsfml-system.3.0.dylib  libsfml-window.2.6.dylib  libsfml-window.3.0.dylib  libsndfile.1.dylib  libtiff.6.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib  libxcb-render.0.dylib  libxcb-shm.0.dylib  libxcb.1.dylib
build_qmake/CISYNTH.app/Contents/MacOS/: CISYNTH
build_qmake/CISYNTH.app/Contents/PlugIns/bearer/: libqgenericbearer.dylib
build_qmake/CISYNTH.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
build_qmake/CISYNTH.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjpeg.dylib  libqmacheif.dylib  libqmacjp2.dylib  libqpdf.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
build_qmake/CISYNTH.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
build_qmake/CISYNTH.app/Contents/PlugIns/printsupport/: libcocoaprintersupport.dylib
build_qmake/CISYNTH.app/Contents/PlugIns/styles/: libqmacstyle.dylib
build_qmake/CISYNTH.app/Contents/PlugIns/virtualkeyboard/: libqtvirtualkeyboard_hangul.dylib  (+4 more)
build_qmake/CISYNTH.app/Contents/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
cmake_backup/: CMakeLists.txt  debug_cisynth.sh  emergency_run.sh  rebuild_cisynth.sh
cmake_backup/resources/: fix_app.sh.in
resources/: Info.plist  Info.plist.in
src/: AudioVisualizer.cpp  AudioVisualizer.h  MainWindow.cpp  MainWindow.h  SSS_Viewer.c  main.cpp
src/core/: ZitaRev1.cpp  ZitaRev1.h  audio.c  audio.h  audio_c_api.h  audio_rtaudio.cpp  audio_rtaudio.h  config.h  context.h  display.c  display.h  dmx.c  dmx.h  doublebuffer.h  error.c  main.c  midi_controller.cpp  midi_controller.h  multithreading.c  multithreading.h  pareq.h  shared.c  synth.c  synth.h  synth_fft.c  synth_fft.h  three_band_eq.cpp  three_band_eq.h  udp.c  udp.h  wave_generation.c  wave_generation.h
src/core/kissfft/: kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h
temp_cisynth/: CISYNTH_copy  linked_launch.sh  minimal_launch.sh
temp_cisynth/frameworks/: QtCore  QtGui  QtNetwork  QtWidgets
(+21 files in other folders)
